2005-10-24  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gnomecc-canvas.c: calculate item widths instead of forcing them to
	be MAX_ITEM_WIDTH, wrap labels with PANGO_WRAP_WORD, this closes
	#319492. force canvas background to base[GTK_STATE_NORMAL], do not 
	repaint canvas background, this way it feels quite quicker when
	resizing the window.

2005-10-19  Carlos Garnacho Parro  <carlosg@gnome.org>

	* control-center.c: set the adjustments, so the GtkScrollBar arrows
	works again, set initial adjustment to view the top of the canvas.

2005-10-15  Rodrigo Moya <rodrigo@novell.com>

	Fixes #315505

	* control-center-categories.c (control_center_entry_new): don't show
	xscreensaver capplet icon if gnome-screensaver is installed.
	(populate_category): don't add NULL entries to the list.

2005-06-06  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gnomecc-canvas.c: added a11y support

2005-05-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gnomecc-canvas.[ch]: new widget that inherits from GnomeCanvas, the
	drawing logic has been mostly moved from control-center.c, but the
	layout function has been quite improved (now handles RTL/LTR
	correctly, assigns a fixed width to all items and caches some things
	to make things a bit faster)
	
	* control-center.c: removed canvas drawing logic, and use the new
	widget

	* Makefile.am: include gnomecc-canvas.[ch]

2005-05-02  Frederic Crozat  <fcrozat@mandriva.com>

	* control-center-categories.c: (populate_category):
	append entries, so we get them in the correct order.

2005-04-11  Mark McLoughlin  <mark@skynet.ie>

	* control-center-categories.c: update for libgnome-menu
	API renaming.

2005-04-06  Mark McLoughlin  <mark@skynet.ie>

	* control-center-categories.c: (control_center_get_information):
	Update for slight change to menu_tree_lookup() API.

2005-03-27  Sebastien Bacher  <seb128@debian.org>

	* control-center-categories.c: (populate_category),
	(read_categories_from_menu_directory),